Commit with categories of tea

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-    <string name="app_name">Wikitea</string>
+    <string name="app_name">Wikiteas</string>
     <string name="edit_username">username</string>
     <string name="edit_password">password</string>
     <string name="button_send">Login</string>
     <string name="text_welcome">Welcome</string>
+    <string name="title">Select type of tea:</string>
 </resources>
