--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="button_send">Login</string>
     <string name="text_welcome">Welcome</string>
     <string name="title">Select type of tea:</string>
+    <string name="action_search"></string>
+    <string name="action_settings">settings</string>
 </resources>
