Details_Activity Not working for the moment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title">Select type of tea:</string>
     <string name="action_search"></string>
     <string name="action_settings">settings</string>
+    <string name="description_BlackTea">Description</string>
 </resources>
