--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="title">Select type of tea:</string>
     <string name="action_search"></string>
     <string name="action_settings">settings</string>
+    <string name="action_favorite">favorite</string>
+    <string name="action_add">add</string>
     <string name="description_BlackTea">Description</string>
 </resources>
