--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,6 @@
     <string name="button_send">Login</string>
     <string name="text_welcome">Welcome</string>
     <string name="title">Select type of tea:</string>
-    <string name="action_search"></string>
 <string name="about_app">Our application is a Wiki of teas. When you logged, you can see a list of categories. If you click on it
 you will see the list of teas from this category. You are free to delete, modify or add any tea or category !</string>
     <string name="action_settings">settings</string>
@@ -13,16 +12,13 @@ you will see the list of teas from this category. You are free to delete, modify
     <string name="action_delete_all_categories">delete all categories</string>
     <string name="action_add">add</string>
     <string name="action_delete_all_teas">delete all teas</string>
-
-    <string name="description_BlackTea">Description</string>
-
     <string name="settings_theme">Theme</string>
     <string name="settings_theme_light">Light</string>
     <string name="settings_theme_dark">Dark</string>
     <string name="settings_about">About the App</string>
-    <string name="error_invalid_password">Wrong password</string>
-    <string name="error_invalid_email">Wrong username</string>
+    <string name="error_login">Invalid login credentials</string>
     <string name="authors">Ludovic &amp; Alexandre</string>
-
+    <string name="error_empty_field">This field is required</string>
+    <string name="action_logout">logout</string>
 
 </resources>
